syntax = "proto3";

package metricagent;

option go_package = "github.com/horseinthesky/metricsagent/internal/pb";

message LoadMetricRequest {
  string id = 1;
  string mtype = 2;
}
