syntax = "proto3";

package metricagent;

import "rpc_update_metrics.proto";
import "rpc_load_metric.proto";

option go_package = "github.com/horseinthesky/metricsagent/internal/pb";

service MetricsAgent {
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponce) {}
  rpc LoadMetric(LoadMetricRequest) returns (LoadMetricResponce) {}
}
